plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group 'com.example'
version '1.0-SNAPSHOT'

sourceCompatibility = '11'

ext {
    icebergVersion = "1.5.2"
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation "org.apache.hive:hive-metastore:3.1.3"
    implementation "org.apache.iceberg:iceberg-core:${icebergVersion}"
    implementation "org.apache.iceberg:iceberg-aws:${icebergVersion}"

    implementation platform('software.amazon.awssdk:bom:2.24.5')
    implementation "software.amazon.awssdk:glue"
    implementation("software.amazon.awssdk:url-connection-client")
    implementation("software.amazon.awssdk:apache-client")
    implementation("software.amazon.awssdk:auth")
    implementation("software.amazon.awssdk:s3")
    implementation("software.amazon.awssdk:kms")
    implementation("software.amazon.awssdk:glue")
    implementation("software.amazon.awssdk:sts")
    implementation("software.amazon.awssdk:dynamodb")
    implementation("software.amazon.awssdk:lakeformation")

}

test {
    minHeapSize = "128m" // initial heap size
    maxHeapSize = "2g" // maximum heap size
    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
}

test {
    useJUnitPlatform()
}
